# outlier_clean_data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  app.py  architecture.md  bench_v10.txt  bench_v11.txt  bench_v12.txt  bench_v13.txt  bench_v8.txt  bench_v9.txt  client.py  conftest.py  deployment.md  inference.py  inference.sh  models.py  openenv.yaml  pyproject.toml  run_all_models.sh  run_benchmark.sh  setup-llama-mac.md  test.py
.context/: PROJECT.md  architecture.md
.context/decisions/: 001-diff-grader.md  002-multi-difficulty.md  003-generative-corruption.md
.context/runbooks/: deployment.md  generate-data.md  (+3 more)
datasets/: catalog.json
docs/: architecture.md  deployment.md  setup-llama-mac.md  technical.md
server/: Dockerfile  app.py  environment.py  grader.py  requirements.txt  sandbox.py  worker.py
tasks/: task_easy.json  task_hard.json  task_medium.json  task_titanic_easy.json  task_titanic_hard.json  task_titanic_medium.json  task_wine_easy.json  task_wine_hard.json  task_wine_medium.json
tests/: test_benchmark_runner.py  test_categories.py  test_corruption_pipeline.py  test_download.py  test_eval.py  test_formats.py  test_grader.py  test_grader_semantic.py  test_hints.py  test_inference_prompt.py  test_models.py  test_rules.py  test_sandbox_safety.py  test_ui_data_loader.py
tools/: benchmark_config.yaml  benchmark_runner.py  dataset_builder.py  download_datasets.py  fix_synthesizer.py  generator.py
ui/: app.py  catalog_view.py  comparison.py  data_loader.py  explorer.py  leaderboard.py  theme.py
(+1173 files in other folders)
