[project]
name = "data-cleaning-env"
version = "0.1.0"
description = "OpenEnv environment for AI-powered data cleaning"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
inference = [
    "openai>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
